@startuml
'https://plantuml.com/class-diagram

abstract class Vehiculo {
    + mover(unaDireccion, unaPosicion) : Posicion
    + chocar(chocable) : IEfecto
}

class Auto {
    + chocar(chocable) : Vehiculo
}

class Moto {
    + chocar(chocable) : Vehiculo
}

class Todoterreno {
    - pozosEncontrados : int
    + chocar(chocable) : Vehiculo
}

Vehiculo <|-- Auto
Vehiculo <|-- Moto
Vehiculo <|-- Todoterreno

@enduml